<resources>
    <string name="app_name">哼哼会</string>
    <string name="action_settings">Settings</string>
    <string name="generic_server_down">网络错误</string>
    <string name="no_internet">无网络连接</string>
    <string name="generic_error">网络错误</string>
    <string name="refresh_again_btn">重试</string>
    <string name="no_loacldata_txt">当前没有下载课件，请前往在线资源页中下载。</string>
    <string name="download_approximately_txt">约</string>
    <string name="net_error">当前网络异常,请检查您的网络设置后重试。</string>
    <string name="tab_main">首页</string>
    <string name="tab_f2f">面对面</string>
    <string name="tab_me">我</string>
    <string name="tab_course">哼哼课堂</string>
    <string name="skip_button">跳过</string>
    <string name="done_button">开始体验</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="skip">Y U DO DIS TO ME?</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image_selector_test">ImageSelectorTestActivity</string>
    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最多可选</string>
    <string name="hint_default_amount">默认9张</string>
    <string name="enable_camera">拍照</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="go_select">Select</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="action_done">完成</string>
    <string name="photo_unit">张</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="integration">积分</string>
    <string name="integration_hint">积分彰显用户对产品的忠诚度，在后期推出资讯和商城中，可以享受更多的特权和优惠活动，敬请期待！</string>
    <string name="integration_use">积分用途</string>
    <string name="my_integration">我的积分</string>
    <string name="my_account">我的账户</string>
    <string name="my_collection">我的收藏</string>
    <string name="integraili_mall">积分商城</string>
    <string name="my_received_question">我收到的提问</string>
    <string name="my_ask_question">我的提问</string>
    <string name="settings">设置</string>
    <string name="hengheng_face_to_face">哼哼面对面</string>
    <string name="add_document">添加作品</string>
    <string name="main_qa_title">我要提问</string>
    <string name="main_qa_summary">免费向专家提问，智能匹配专家回答</string>
    <string name="main_hengheng_qa_title">在线提问</string>
    <string name="main_hengheng_qa_summary">养猪知识大宝库</string>
    <string name="main_hengheng_qa_next">下一步</string>
    <string name="main_hengheng_qa_commit">提交</string>
    <string name="main_hengheng_evaluation_title">哼哼会评</string>
    <string name="main_hengheng_evaluation_summary">深入、全面解读会议</string>
    <string name="main_hengheng_master">热门专家</string>
    <string name="hengheng_master_detail_title">专家详情</string>
    <string name="hengheng_master_list_title">哼哼好专家</string>
    <string name="hengheng_qa_list_title">千百问</string>
    <string name="hengheng_baike_list_title">养猪百科</string>
    <string name="hengheng_baike_detail_title">百科详情</string>
    <string name="hengheng_baike_detail_failed">加在失败，未找到该词条</string>
    <string name="hengheng_chatmain_title">在线咨询</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="all_city">所有区域</string>
    <string name="all_fenlei">所有分类</string>
    <string name="change_city_title">选择城市</string>
    <string name="change_fenlei_title">选择分类</string>
    <string name="txt_input">请输入</string>
    <string name="txt_qa_type">选择提问类别</string>
    <string name="error_most_img">对不起，最多只能上传8张图片</string>
    <string name="error_less_detail">详情描述至少20字，请详细填写</string>
    <string name="error_no_detail">请填写详情描述</string>
    <string name="error_no_type">请选择提问类别</string>
    <string name="error_no_img">请上传至少一张照片</string>
    <string name="error_no_list_data">对不起，没有找到数据记录</string>
    <string name="hengheng_who_anwser_question_title">%1$s解答的问题</string>
    <string name="hengheng_who_art_title">%1$s的文章</string>
    <string name="hengheng_my_question_title">我的提问</string>
    <string name="hengheng_my_anwser_question_title">我的答题</string>
    <string name="txt_anwser_num">已有 %1$s 个专家回答</string>
    <string name="txt_anwser_num_1">参考答案（%1$s人回答）</string>
    <string name="txt_shuliang_intro">发病数量：</string>
    <string name="txt_riling_intro">猪只日龄：</string>
    <string name="txt_tiwen_intro">猪只体温：</string>
    <string name="txt_bingshi_intro">过往病史：</string>
    <string name="txt_mianyi_intro">免疫情况：</string>
    <string name="txt_yongyao_intro">用药情况：</string>
    <string name="hengheng_question_detail_title">问题详情</string>
    <string name="zan_count">%1$s</string>
    <string name="main_hengheng_anwser_question_title">回答问题</string>
    <string name="main_hengheng_anwser_question_commit">发布</string>
    <string name="phone_record_detail_title">电话咨询详情</string>
    <string name="phone_record_call">电话咨询</string>
    <string name="txt_thirdparty_regist">快速注册（微信，QQ）</string>
    <string name="txt_normal_regist">手机号/邮箱注册</string>
    <string name="txt_expert_regist">认证</string>
    <string name="title_regist_page">哼哼会注册</string>
    <string name="title_expert_regist_page">专家入驻</string>
    <string name="hotarticle">文章推荐</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="unknow_person">陌生人</string>
    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="course_title">怎样饲养小猪</string>
    <string name="course_free">养猪学院</string>
    <string name="course_hot">热门推荐</string>
    <string name="course_priv">原创视频</string>
    <string name="course_list_free_title">养猪学院</string>
    <string name="course_view">查看</string>
    <string name="course_detail">课程详情</string>
    <string name="course_detail_desc">\u3000\u3000三十而立”一般指“30岁人应该能独立 承担自己应承受的责任，并确定自己的人生目标与发展方向”。而对于李曼养猪大会来说而对于李曼养猪大会来说而对于李曼养猪大会来说而对于李曼养猪大会来说</string>
    <string name="play_display_high">高清</string>
    <string name="play_display_normal">标清</string>
    <string name="buy">购买</string>
    <string name="course_desc_expend">展开</string>
    <string name="course_teacher">主讲</string>
    <string name="comment_hint">说点什么...</string>
    <string name="comment">评论</string>
    <string name="hot_more">更\n多</string>
    <string name="info">提示</string>
    <string name="invalid_number">你输入的是一个无效号码</string>
    <string name="internet_setting">网络设置</string>
    <string name="network_error_em">网络异常，请检查网络设置</string>
    <string name="re_get_code">重新发送</string>
    <string name="hengheng_meeting_comment">哼哼会评</string>
    <string name="meeting_detail">会议详情</string>
    <string name="meeting_live_room">直播室</string>
    <string name="meeting_lesson_note">听课笔记</string>
    <string name="meeting_comment">评论</string>
    <string name="meeting_desc">始创于1985年的李曼养猪大会由美国明尼苏达大学主办始创于1985年的李曼养猪大会由美国明尼苏达大学主办始创于1985年的李曼养猪大会由美国明尼苏达大学主办始创于1985年的李曼养猪大会由美国明尼苏达大学主办1985年的李曼养猪大会由美国明尼苏达大学主办始创于1985年的李曼养猪大会由美国明尼苏达大学主办1985年的李曼养猪大会由美国明尼苏达大学主办始创于1985年的李曼养猪大会由美国明尼苏达大学主办</string>
    <string name="share_to">分享到</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_sina">微博</string>
    <string name="platform_weichat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <string name="share_title">开源中国分享</string>
    <string name="str_phonenum_is_null">请先输入手机号码</string>
    <string name="str_code_is_null">请先获取验证码</string>
    <string name="str_invite_code_is_null">邀请码为空，请重新填写</string>
    <string name="str_check_code">正在校验验证码</string>
    <string name="error_view_loading">加载中…</string>
    <string name="str_txt_recommend">推荐给好友</string>
    <string name="str_contact_us">联系客服</string>
    <string name="str_txt_feed">意见反馈</string>
    <string name="str_txt_signin">签到</string>
    <string name="update_username_title">修改姓名</string>
    <string name="update_usernick_title">修改用户昵称</string>
    <string name="update_userworkunit_title">修改工作单位</string>
    <string name="update_useraddress_title">修改地址</string>
    <string name="update_job_title">修改职称</string>
    <string name="forget_password">忘记密码</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="count_down">ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_please_input_6_32_password">请输入长度为6-32之间的密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的手机号或邮箱地址</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="verify_code_hint">已经发送验证码至</string>
    <string name="invite_code_hint">已被邀请为专家</string>
    <string name="str_feedback_submit">提交</string>
    <string name="str_feedback_et_hint">我们将为您不断改进(最多100字)</string>
    <string name="str_feedback_contact">您的手机号或邮箱：（选填）</string>
    <string name="str_feedback_contact_hint">方便我们给您答复</string>
    <string name="str_feedback_succeed">谢谢您的反馈，我们会仔细阅读并及时处理</string>
    <string name="str_feedback_tip">我们会仔细阅读您的反馈，并尽早给您回复。感谢您的理解与支持。</string>
    <string name="str_feedback_title">用户反馈</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="actionbar_title_about_henghenghui">关于哼哼会</string>
    <string name="progress_doing">正在操作，请稍后...</string>
    <string name="progress_getInfo_doing">正在获取个人信息，请稍后...</string>
    <string name="op_success">操作成功</string>
    <string name="op_guanzhu_success">关注成功</string>
    <string name="op_cancel_guanzhu_success">已取消关注</string>
    <string name="op_fav_success">收藏成功</string>
    <string name="op_cancel_fav_success">已取消收藏</string>
    <string name="op_failed">操作失败，错误码：%1$s，%2$s</string>
    <string name="load_master_detail_failed">对不起，无法获取到专家资料</string>
    <string name="master_detail_answer">回答问题(%1$s)</string>
    <string name="master_detail_hot">热度(%1$s)</string>
    <string name="master_detail_professional">擅长：%1$s</string>
    <string name="master_detail_level">Lv %1$s</string>
    <string name="henghenghui_site">官网</string>
    <string name="knowmore">了解更多</string>
    <string name="gitapp">Git客户端</string>
    <string name="copyright">Copyright © HengHengHui All rights reserved.</string>
    <string name="update">检查新版本</string>
    <string name="actionbar_title_setting_notification">新消息提醒</string>
    <string name="notice_accept">接收新通知</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>
    <string name="notice_app_exit">退出后不提醒</string>
    <string name="course_name">%1$s</string>
    <string name="course_price">￥%1$.1f</string>
    <string name="course_play_count">播放:%1$d次</string>
    <string name="course_time_duration">%1$d分钟</string>
    <string name="setting_app_update">检查新版本</string>
    <string name="setting_app_checking_update">检查新版本……</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_info_force">检测到重要的新版本，必须要更新后才能使用，请立即更新</string>
</resources>