<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hot_subject"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xnf.henghenghui.ui.activities.ArticleCommentListActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:visibility="visible"
                android:contentDescription="@string/app_name"
                android:src="@drawable/green_back" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/txt_titleStyle1"
                android:text="评论列表"
                android:layout_gravity="center"/>
        </LinearLayout>

        <View
            android:id="@+id/driver"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pure"
            android:layout_below="@+id/top_bar">
        </View>
        <com.xnf.henghenghui.ui.view.PullListView
            android:id="@+id/course_comment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:cacheColorHint="#00000000"
            android:descendantFocusability="afterDescendants"
            android:divider="@color/pure"
            android:dividerHeight="1px"
            android:layout_below="@+id/driver"
            android:fastScrollAlwaysVisible="false"
            android:fastScrollEnabled="false" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/meeting_comment_send"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/course_detail_comment_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/meeting_comment_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/course_detail_comment_edit_height"
                android:layout_marginLeft="@dimen/course_detail_comment_edit_leftmargin"
                android:layout_weight="6"
                android:background="@drawable/editsharp"
                android:hint="@string/comment_hint" />

            <Button
                android:id="@+id/meeting_comment_add"
                android:layout_width="0dp"
                android:layout_height="@dimen/course_detail_comment_btnheight"
                android:layout_marginLeft="@dimen/course_detail_comment_edit_rightmargin"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:textColor="@color/antiquewhite"
                android:background="@drawable/btn_comment_bg"
                android:text="@string/comment" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>