<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/top_bar_background">

        <TextView
            android:id="@+id/txt_left"
            style="@style/txt_titleStyle1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/green_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/txt_titleStyle1"
            android:layout_centerInParent="true"
            android:text="@string/integration" />

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_groupinfo"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_right"
            style="@style/txt_titleStyle1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textSize="16dp" />

    </RelativeLayout>

    <!--正文-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF6968"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="7.5"
            android:background="@drawable/integration_logo"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.6"
            android:gravity="center">

            <Button
                android:id="@+id/integration_num"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="积分 160"
                android:textSize="17dp"
                android:textColor="#ee3131"
                android:clickable="false"
                android:background="@drawable/btn_integration" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="------------------------------"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:id="@+id/textView4"></TextView>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/integration" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/integration_use"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:id="@+id/textView5" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="-------------------------------------"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:id="@+id/textView2"></TextView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:padding="10dp"
                android:text="@string/integration_hint"
                android:id="@+id/textView3" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:id="@+id/view3" />
    </LinearLayout>

</LinearLayout>